--- a/docs/Report.tex
+++ b/docs/Report.tex
@@ -524,14 +524,15 @@ By point number 5, we have that the minimum amount of time necessary to serve su
 \item $|V|$ time slots for reaching the next stop 
 \item $1$ time slot for putting the train in the parking of $v$
 \end{enumerate}
-Having set, by point 4, the maximum number of time slots exactly to $2|V|+3$ this means that the solver might yield a solution iff condition 5 is satisfied and there is not a the train does pass exactly one time by any station (as the amount of time slots is not sufficient to permit repetitions of them). This means that the routes taken by the train exactly describe an Hamiltonian circuit.
+Having set, by point 4, the maximum number of time slots exactly to $2|V|+3$ this means that the solver might yield a solution iff condition 5 is satisfied and there is not a train 
+that does pass exactly one time by any station (as the amount of time slots is not sufficient to permit repetitions of them). This means that the routes taken by the train exactly describe an Hamiltonian circuit.
 We can finally conclude that this problem admits a solution iff there is an Hamiltonian circuit in the graph $G=(V,E)$ and this proves the NP-hardness of this problem.
 \subsection{Considerations on admissibility verification }
 Consider now a generic instance of a train problem:
 \begin{enumerate}
 \item the number of trains that are not still in a park is less than $|V|*T$ as any train must use a time slot to be prepared on a stop.
 \item the maximum number of times a train can reach a station is again bounded by $|V|*T$ for the same reasons as before
-\item the requests are at in a linear relation with the total length of the program. Let $R$ be the set of the requests  
+\item the requests are in a linear relation with the total length of the program. Let $R$ be the set of the requests  
 \end{enumerate}
 points 1 and 2 combined states that the number occurring in the definition of the program are bounded by values polynomially related to the input. 
 If we consider a generic solution to a generic instance of the train problem we can evaluate if it is admissible in
